--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,13 @@ plugins {
     id 'kotlin-kapt'
 }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('apikey.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+def apiKey = keystoreProperties.getProperty("nasa_api_key","")
+
 android {
     compileSdk 30
 
@@ -22,8 +29,14 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "NASA_API_KEY", apiKey
+        }
+        debug {
+            buildConfigField "String", "NASA_API_KEY", apiKey
         }
     }
+
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -57,6 +70,7 @@ dependencies {
     //Room
     implementation 'androidx.room:room-runtime:2.3.0'
     kapt 'androidx.room:room-compiler:2.3.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
