--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SpaceHunters">
+        android:theme="@style/Theme.SpaceHunters"
+        android:usesCleartextTraffic="true">
         <activity
             android:name="com.example.spacehunters.main.ui.MainActivity"
             android:exported="true">
