--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.spacehunters">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".main.App"
         android:allowBackup="true"
@@ -12,14 +14,24 @@
         android:theme="@style/Theme.SpaceHunters"
         android:usesCleartextTraffic="true">
         <activity
-            android:name="com.example.spacehunters.main.ui.MainActivity"
+            android:name=".main.ui.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".main.ui.MainActivity"
+            android:exported="true" />
+        <!--            <intent-filter>-->
+        <!--                <action android:name="android.intent.action.MAIN" />-->
+
+        <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+        <!--            </intent-filter>-->
+        <!--        </activity>-->
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
